<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="15dp"
        android:id="@+id/llBusinessList"
        android:layout_margin="7dp"
        android:background="@drawable/rect_stroke_8dp"
        android:paddingVertical="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="end"
            android:gravity="center">

            <ImageView
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:padding="3dp"
                android:id="@+id/ivEdit"
                android:src="@drawable/ic_pencil"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"/>

            <ImageView
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:padding="2dp"
                android:id="@+id/ivDelete"
                android:src="@drawable/ic_delete"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:gravity="center"
            android:id="@+id/llBusinessLogo"
            android:layout_gravity="center"
            android:background="@drawable/iv_circle_black_background">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:padding="1dp"
                android:layout_gravity="center"
                android:src="@drawable/app_logo"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:layout_marginTop="7dp"
            android:fontFamily="@font/font_bold"
            android:gravity="center"
            android:includeFontPadding="false"
            android:ellipsize="end"
            android:id="@+id/tvBusinessName"
            android:maxLines="1"
            android:text="@string/oceanmtech"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:fontFamily="@font/font_light"
            android:gravity="center"
            android:includeFontPadding="false"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/business"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:background="@drawable/rect_stroke_8dp"
            android:fontFamily="@font/font_regular"
            android:gravity="center"
            android:paddingVertical="5dp"
            android:text="@string/set_as"
            android:maxLines="1"
            android:ellipsize="end"
            android:id="@+id/tvSetAs"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvChoose"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@drawable/rect_stroke_8dp"
                android:fontFamily="@font/roboto_medium_numbers"
                android:gravity="center"
                android:maxLines="1"
                android:ellipsize="end"
                android:paddingVertical="5dp"
                android:text="@string/choose_frame"
                android:textColor="@color/black"
                android:textSize="8sp" />

            <TextView
                android:id="@+id/tvFrame"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:background="@drawable/rect_stroke_8dp"
                android:fontFamily="@font/roboto_medium_numbers"
                android:gravity="center"
                android:maxLines="1"
                android:ellipsize="end"
                android:paddingVertical="5dp"
                android:text="@string/frame"
                android:textColor="@color/black"
                android:textSize="8sp" />
        </LinearLayout>
    </LinearLayout>
</layout>