<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@drawable/rect_bottom_30dp"
        android:orientation="horizontal"
        android:paddingHorizontal="20dp"
        android:paddingVertical="5dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:id="@+id/llEvent"
            android:background="@drawable/rect_transprent_10dp"
            android:orientation="vertical">
            
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/ivEvents"
                android:src="@drawable/ic_event"
                android:adjustViewBounds="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:text="@string/event"
                android:id="@+id/tvEvent"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="10sp"
                android:ellipsize="end"
                android:layout_marginTop="5dp"
                android:maxLines="1"
                android:fontFamily="@font/font_bold"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_marginHorizontal="5dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:id="@+id/llGreetings"
            android:orientation="vertical">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/ivGreetings"
                android:src="@drawable/ic_greetings"
                android:adjustViewBounds="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:text="@string/greetings"
                android:id="@+id/tvGreetings"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="10sp"
                android:ellipsize="end"
                android:layout_marginTop="5dp"
                android:maxLines="1"
                android:fontFamily="@font/font_bold"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_marginHorizontal="5dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:id="@+id/llMotivational"
            android:orientation="vertical">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/ivMotivational"
                android:src="@drawable/ic_motivational"
                android:adjustViewBounds="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:text="@string/motivational"
                android:id="@+id/tvMotivational"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="10sp"
                android:ellipsize="end"
                android:layout_marginTop="5dp"
                android:maxLines="1"
                android:fontFamily="@font/font_bold"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_marginHorizontal="5dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:id="@+id/llSetting"
            android:orientation="vertical">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/ivSettings"
                android:src="@drawable/ic_settings"
                android:adjustViewBounds="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:text="@string/settings"
                android:id="@+id/tvSetting"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="10sp"
                android:ellipsize="end"
                android:layout_marginTop="5dp"
                android:maxLines="1"
                android:fontFamily="@font/font_bold"
                android:textStyle="bold"/>
        </LinearLayout>
    </LinearLayout>
</layout>