<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".UI.DashboardModule.SettingsModule.FamilyDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="20dp">

        <include
            android:id="@+id/toolBar"
            layout="@layout/lay_title_toolbar" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:overScrollMode="never"
            android:paddingHorizontal="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:layout_marginVertical="7dp"
                        android:layout_marginEnd="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/rect_gray_10dp"
                        android:fontFamily="@font/calibri_regular"
                        android:hint="@string/father_name"
                        android:imeOptions="actionNext"
                        android:includeFontPadding="false"
                        android:inputType="number"
                        android:maxLength="15"
                        android:maxLines="1"
                        android:id="@+id/edtFather"
                        android:padding="10dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray"
                        android:textSize="14sp" />

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:layout_marginVertical="7dp"
                        android:layout_marginStart="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/rect_gray_10dp"
                        android:fontFamily="@font/calibri_regular"
                        android:hint="@string/mother_name"
                        android:imeOptions="actionNext"
                        android:includeFontPadding="false"
                        android:inputType="textEmailAddress"
                        android:maxLength="30"
                        android:maxLines="1"
                        android:padding="10dp"
                        android:id="@+id/edtMother"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginVertical="7dp"
                    android:background="@drawable/rect_gray_10dp"
                    android:orientation="horizontal">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:background="@null"
                        android:fontFamily="@font/calibri_regular"
                        android:hint="@string/husband_name"
                        android:imeOptions="actionNext"
                        android:includeFontPadding="false"
                        android:inputType="text"
                        android:maxLength="30"
                        android:id="@+id/edtSpouse"
                        android:maxLines="1"
                        android:padding="10dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginVertical="7dp"
                    android:background="@drawable/rect_gray_10dp"
                    android:orientation="horizontal">

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:layout_weight="1"
                        android:background="@null"
                        android:fontFamily="@font/calibri_regular"
                        android:hint="@string/children_name"
                        android:imeOptions="actionNext"
                        android:includeFontPadding="false"
                        android:inputType="text"
                        android:maxLength="30"
                        android:maxLines="1"
                        android:id="@+id/edtChild"
                        android:padding="10dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray"
                        android:textSize="14sp" />

                    <ImageView
                        android:id="@+id/ivAddChild"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="10dp"
                        android:adjustViewBounds="true"
                        android:src="@drawable/ic_add"
                        android:visibility="visible" />
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:id="@+id/rvChild"
                    android:layout_height="wrap_content"
                    android:overScrollMode="never" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginVertical="7dp"
                    android:background="@drawable/rect_gray_10dp"
                    android:orientation="horizontal">

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:layout_weight="1"
                        android:background="@null"
                        android:fontFamily="@font/calibri_regular"
                        android:hint="@string/brother_name"
                        android:imeOptions="actionNext"
                        android:includeFontPadding="false"
                        android:inputType="text"
                        android:maxLength="30"
                        android:maxLines="1"
                        android:padding="10dp"
                        android:id="@+id/edtBrother"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray"
                        android:textSize="14sp" />

                    <ImageView
                        android:id="@+id/ivAddBrother"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="10dp"
                        android:adjustViewBounds="true"
                        android:src="@drawable/ic_add"
                        android:visibility="visible" />
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:id="@+id/rvBrother"
                    android:layout_height="wrap_content"
                    android:overScrollMode="never" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginVertical="7dp"
                    android:background="@drawable/rect_gray_10dp"
                    android:orientation="horizontal">

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:layout_weight="1"
                        android:background="@null"
                        android:fontFamily="@font/calibri_regular"
                        android:hint="@string/sister_name"
                        android:imeOptions="actionNext"
                        android:includeFontPadding="false"
                        android:inputType="text"
                        android:maxLength="30"
                        android:maxLines="1"
                        android:id="@+id/edtSister"
                        android:padding="10dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray"
                        android:textSize="14sp" />

                    <ImageView
                        android:id="@+id/ivAddSister"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="10dp"
                        android:adjustViewBounds="true"
                        android:src="@drawable/ic_add"
                        android:visibility="visible" />
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:id="@+id/rvSister"
                    android:layout_height="wrap_content"
                    android:overScrollMode="never" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="30dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvReset"
                        android:layout_width="0dp"
                        android:layout_height="45dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginHorizontal="15dp"
                        android:layout_weight="1"
                        android:background="@drawable/rect_gradient_20dp"
                        android:fontFamily="@font/font_bold"
                        android:gravity="center"
                        android:paddingVertical="10dp"
                        android:text="@string/reset"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tvSave"
                        android:layout_width="0dp"
                        android:layout_height="45dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginHorizontal="15dp"
                        android:layout_weight="1"
                        android:background="@drawable/rect_gradient_20dp"
                        android:fontFamily="@font/font_bold"
                        android:gravity="center"
                        android:paddingVertical="10dp"
                        android:text="@string/save"
                        android:textColor="@color/white"
                        android:textSize="18sp" />
                </LinearLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>
</layout>