<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".UI.LoginModule.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_weight=".35"
                android:layout_height="0dp"
                android:orientation="vertical"
                android:paddingTop="45dp"
                android:background="@drawable/iv_login_bg">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center_horizontal"
                    android:adjustViewBounds="true"
                    android:src="@drawable/iv_splash" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".65" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="200dp"
            android:elevation="5dp"
            android:padding="30dp"
            android:id="@+id/llLoginBox"
            android:background="@drawable/rect_white_10dp"
            android:layout_centerHorizontal="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:text="@string/login"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:ellipsize="end"
                android:maxLines="1"
                android:fontFamily="@font/poppins_regular"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:text="@string/dummy_login"
                android:textColor="@color/black"
                android:textSize="10sp"
                android:ellipsize="end"
                android:maxLines="2"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins_regular"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="5dp"
                android:layout_marginBottom="5dp"
                android:elevation="5dp"
                android:id="@+id/llFaceBook"
                android:padding="10dp"
                android:background="@drawable/rect_white_5dp"
                android:backgroundTint="@color/blue"
                android:orientation="horizontal">
                
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_facebook"
                    android:adjustViewBounds="true"
                    android:layout_gravity="start"
                    android:scaleType="centerInside"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    android:text="@string/continue_fb"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:ellipsize="end"
                    android:id="@+id/tvFaceBook"
                    android:maxLines="1"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:fontFamily="@font/poppins_regular"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="5dp"
                android:layout_marginBottom="5dp"
                android:elevation="5dp"
                android:padding="10dp"
                android:id="@+id/llGoogle"
                android:background="@drawable/rect_white_5dp"
                android:backgroundTint="@color/red"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_google"
                    android:adjustViewBounds="true"
                    android:layout_gravity="start"
                    android:scaleType="centerInside"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    android:text="@string/continue_google"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:ellipsize="end"
                    android:id="@+id/tvGoogle"
                    android:maxLines="1"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:fontFamily="@font/poppins_regular"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llAdContainerShare"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:gravity="center"
            android:layout_below="@+id/llLoginBox"
            android:layout_marginTop="20dp"
            android:visibility="visible"
            android:orientation="vertical" />
    </RelativeLayout>
</layout>